@@ -1,7 +1,7 @@
 //
 // GL4Java extensions get all permissions !
 //
-// This peace should be added on top of the file:
+// This config-piece should be added on top of the file:
 //
 // If a Java2 SDK is used:
 //	<java2-installation>/jre/lib/security/java.policy
@@ -9,11 +9,10 @@
 // If a Java2 JRE is used:
 //	<jre-installation>/lib/security/java.policy
 //
-// GL4Java Homepage:
+// The GL4Java Homepage:
 //
 //	http://www.jausoft.com/gl4java/
 //
-
 
 grant codeBase "http://www.jausoft.com/Files/Java/1.1.X/GL4Java/Installer/*"
 {
@@ -46,6 +45,16 @@ grant codeBase "http://www.jausoft.com/Files/Java/1.1.X/GL4Java/demos/GLLandScap
 };                                                                              
 
 grant codeBase "http://www.jausoft.com/Files/Java/1.1.X/GL4Java/demos/HodglimsNeHe/*"
+{
+        permission java.security.AllPermission;
+};                                                                              
+
+grant codeBase "http://www.jausoft.com/Files/Java/1.1.X/GL4Java-Stuff/*"
+{
+        permission java.security.AllPermission;
+};                                                                              
+
+grant codeBase "http://www.jausoft.com/Files/Java/1.1.X/GL4Java-Stuff/psi/*"
 {
         permission java.security.AllPermission;
 };                                                                              
